# syncit

./: README.md
client/: .sync  Cargo.toml
client/src/: api.rs  auth.rs  blob.rs  lib.rs  main.rs  project.rs  sync.rs  utils.rs
server/: Cargo.toml  db.sql
server/src/: auth.rs  database.rs  lib.rs  main.rs
web/: bun.lockb  package.json
web/src/: app.html
web/src/routes/: +page.svelte
