[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"]}
crypto = "0.5.1"
mysql = "24.0.0"
once_cell = "1.19.0"
pwhash = "1.0.0"
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"
serde_qs = "0.12.0"
ssl = "0.1.0"
tide = "0.16.0"
tokio = "1.35.1"
uuid = {version = "1.6.1", features = ["v4"]}
